# TRACED_ICSE_24

./: README.md  modeling.py  requirements.txt  run_finetune_clone.py  run_finetune_vul_detect.py  run_pretrain_traced.py
tracer/: .gitignore  README.md  all_input_output.json  analyze  common.py  compile_all.py  cover_all.py  cover_export.py  file_utils.py  full_run.sh  gcov_clean  gcov_generate  get_sequence.py  get_trace.py  print_submission_counts.py  requirements.txt  run.sh  run_trace.sh  sequenceize_logs.py  sequenceize_logs_c.py  sequenceize_logs_cpp.py  sequenceize_logs_from_metadata.py  test_settrace.py  text_utils.py  trace_asm.py  trace_problem.sh  transform_xml.py  var_utils.py
tracer/01_preprocess/: compile_all.py  convert_sample_input_output_full_to_files.py  download_all_data.sh  print_submission_counts.py
tracer/02_trace/: analyze  analyze.py  trace_all_problems.sh  trace_asm.py  trace_problem.sh  var_utils.py
tracer/03_postprocess/: file_utils.py  get_sequence.py  get_trace.py  postprocess_all_problems.sh  postprocess_problem.sh  sequenceize_logs.py  sequenceize_logs_from_metadata.py  text_utils.py  transform_xml.py
tracer/04_coverage_prediction/: README.md  split.py
tracer/04_coverage_prediction/conversion/: __main__.py  main.py
tracer/test/: input.txt  test.cpp  test2.cpp
tracer/test/expected/: analyze_output.txt  sequenceize_logs_c_output.txt
tracer/tree-climber/: pyproject.toml  readme.md
tracer/tree-climber/tree_climber/: tree_sitter_utils.py
utils/: data_collator.py  data_process_utils.py  parse_args.py  utils.py
(+10 files in other folders)
